--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Library\Library.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Unity" Version="5.11.3" />
+  </ItemGroup>
 </Project>
